--- a/extract-mnist.ipynb
+++ b/extract-mnist.ipynb
@@ -30,12 +30,12 @@
    "source": [
     "paths = {\n",
     "    \"train\": {\n",
-    "        \"images\": \"train-images-idx3-ubyte\",\n",
-    "        \"labels\": \"train-labels-idx1-ubyte\"\n",
+    "        \"images\": \"./data/train-images-idx3-ubyte\",\n",
+    "        \"labels\": \"./data/train-labels-idx1-ubyte\"\n",
     "    },\n",
     "    \"test\": {\n",
-    "        \"images\": \"t10k-images-idx3-ubyte\",\n",
-    "        \"labels\": \"t10k-labels-idx1-ubyte\"\n",
+    "        \"images\": \"./data/t10k-images-idx3-ubyte\",\n",
+    "        \"labels\": \"./data/t10k-labels-idx1-ubyte\"\n",
     "    }\n",
     "}"
    ]
